--- a/parent-project/Batch/pom.xml
+++ b/parent-project/Batch/pom.xml
@@ -25,6 +25,12 @@
     	<version>1.0-SNAPSHOT</version>
     </dependency>
     
+        <dependency>
+    	<groupId>org.beanio</groupId>
+    	<artifactId>beanio</artifactId>
+    	<scope>compile</scope>
+    </dependency>
+    
     <dependency>
     	<groupId>com.java.GymPassTest</groupId>
     	<artifactId>Business</artifactId>
@@ -54,4 +60,20 @@
 	</dependency>
     
   </dependencies>
+  
+      <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <executable>true</executable>
+                    <mainClass>com.java.GymPassTest.Batch.App</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
+  
 </project>
