--- a/parent-project/pom.xml
+++ b/parent-project/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
   <dependencies>
 
-	<dependency>
+<dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter</artifactId>
 </dependency>
@@ -43,8 +43,6 @@
   			<scope>import</scope>
   		</dependency>
 
-<!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
-
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -70,4 +68,30 @@
   	</dependencies>  	
   	
   </dependencyManagement>
+  
+    <profiles>
+    <profile>
+      <id>qa</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>install</phase>
+                <goals>
+                  <goal>copy-dependencies</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+  
+
 </project>
